@@ -118,6 +118,14 @@ Example:
 //* palette-fill:food *// #FFFFFF
 //* palette-stroke:food *// #A0A0A0
 //* palette-highlight:food *// #D5D5D5
+
+Plugins can specify code to be executed on load, on start, and on stop.
+Example:
+//* onload:foo *//
+your code here...
+
+NOTE: name of on load, on start, and on stop sections must match the
+name of one of the plugin blocks.
 '''
 
 
@@ -129,12 +137,15 @@ def clear():
         'block': 'BLOCKPLUGINS',
         'parameter': 'PARAMETERPLUGINS',
         'setter': 'SETTERPLUGINS',
+        'onload': 'ONLOAD',
+        'onstart': 'ONSTART',
+        'onstop': 'ONSTOP',
         'palette-icon': 'PALETTEPLUGINS',
         'palette-fill': 'PALETTEFILLCOLORS',
         'palette-stroke': 'PALETTESTROKECOLORS',
         'palette-highlight': 'PALETTEHIGHLIGHTCOLORS',
         'palette-stroke-highlight': 'HIGHLIGHTSTROKECOLORS'}
-    JS_TYPES = ('flow', 'arg', 'block', 'parameter', 'setter')
+    JS_TYPES = ('flow', 'arg', 'block', 'parameter', 'setter', 'onload', 'onstart', 'onstop')
     # 'blkName': 'imageData',
     IMAGES = {}
 
